plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'checkstyle'
    id 'com.github.spotbugs' version '6.0.26'
    id 'jacoco'
    id 'org.sonarqube' version '5.1.0.4882'
}

import com.github.spotbugs.snom.Confidence
import com.github.spotbugs.snom.Effort

group = 'com.emmanuelgabe'
version = project.hasProperty('version') && project.property('version') != 'unspecified'
        ? project.property('version')
        : '0.0.1-SNAPSHOT'
description = 'portfolio-backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

springBoot {
    mainClass = 'com.emmanuelgabe.portfolio.PortfolioBackendApplication'
    buildInfo()
}

repositories {
    mavenCentral()
}

dependencies {
    // Security: Force secure versions of transitive dependencies to fix CVEs
    constraints {
        implementation('org.apache.commons:commons-lang3:3.18.0') {
            because 'CVE-2025-48924 fixed in 3.18.0+'
        }
        implementation('org.apache.commons:commons-compress:1.26.0') {
            because 'CVE-2024-25710 and CVE-2024-26308 fixed in 1.26.0+'
        }
    }

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
    implementation 'org.springframework.boot:spring-boot-starter-graphql'
    implementation 'com.graphql-java:graphql-java-extended-scalars:22.0'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // Documentation
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'

    // Mapping
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    // Logging
    implementation 'net.logstash.logback:logstash-logback-encoder:8.0'

    // Metrics (Prometheus)
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // Error tracking (Sentry)
    implementation 'io.sentry:sentry-spring-boot-starter-jakarta:7.19.1'
    implementation 'io.sentry:sentry-logback:7.19.1'

    // Resilience4j (Circuit Breaker)
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
    implementation 'io.github.resilience4j:resilience4j-micrometer:2.2.0'

    // JWT Authentication
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Image processing
    implementation 'net.coobird:thumbnailator:0.4.20'
    implementation 'org.sejda.imageio:webp-imageio:0.1.6'

    // Markdown processing
    implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'

    // HTML/SVG sanitization
    implementation 'org.jsoup:jsoup:1.18.1'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'io.rest-assured:rest-assured:5.5.0'
    testImplementation 'org.testcontainers:testcontainers:1.20.4'
    testImplementation 'org.testcontainers:postgresql:1.20.4'
    testImplementation 'org.testcontainers:rabbitmq:1.20.4'
    testImplementation 'org.testcontainers:kafka:1.20.4'
    testImplementation 'org.testcontainers:elasticsearch:1.20.4'
    testImplementation 'org.testcontainers:junit-jupiter:1.20.4'
    testImplementation 'org.springframework.kafka:spring-kafka-test'
    testImplementation 'org.springframework.graphql:spring-graphql-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

// Checkstyle Configuration
checkstyle {
    toolVersion = '10.20.2'
    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
    ignoreFailures = false
    maxWarnings = 0
}

checkstyleMain {
    source = 'src/main/java'
}

checkstyleTest {
    source = 'src/test/java'
}

// SpotBugs Configuration
spotbugs {
    toolVersion = '4.8.6'
    ignoreFailures = false
    effort = Effort.valueOf('MAX')
    reportLevel = Confidence.valueOf('MEDIUM')
    excludeFilter = file("${rootDir}/config/spotbugs/spotbugs-exclude.xml")
}

tasks.withType(com.github.spotbugs.snom.SpotBugsTask) {
    enabled = true
    ignoreFailures = false
    reports {
        html {
            required = true
            outputLocation = file("$buildDir/reports/spotbugs/${name}.html")
        }
        xml {
            required = true
            outputLocation = file("$buildDir/reports/spotbugs/${name}.xml")
        }
    }
}

// JaCoCo Configuration
jacoco {
    toolVersion = "0.8.12"
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                '**/config/**',
                '**/entity/**',
                '**/dto/**',
                '**/exception/**',
                '**/mapper/**',
                '**/version/**',
                '**/health/**',
                '**/security/**',
                '**/graphql/**',
                '**/batch/**',
                '**/kafka/**',
                '**/messaging/**',
                '**/metrics/**',
                '**/search/**',
                '**/audit/**',
                '**/service/ImageService.class',
                '**/service/ImageProcessorService.class',
                '**/service/VisitorTrackingService.class',
                '**/service/impl/VisitorTrackingServiceImpl.class',
                '**/service/impl/ElasticsearchSearchServiceImpl.class',
                '**/service/impl/EmailSenderServiceImpl.class',
                '**/service/impl/AuditServiceImpl.class',
                '**/controller/AdminActiveUsersController.class',
                '**/controller/VisitorController.class',
                '**/PortfolioBackendApplication.class'
            ])
        }))
    }
}

jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    violationRules {
        rule {
            limit {
                minimum = 0.80
            }
        }
        rule {
            element = 'CLASS'
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.70
            }
        }
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                '**/config/**',
                '**/entity/**',
                '**/dto/**',
                '**/exception/**',
                '**/mapper/**',
                '**/version/**',
                '**/health/**',
                '**/security/**',
                '**/graphql/**',
                '**/batch/**',
                '**/kafka/**',
                '**/messaging/**',
                '**/metrics/**',
                '**/search/**',
                '**/audit/**',
                '**/service/ImageService.class',
                '**/service/ImageProcessorService.class',
                '**/service/VisitorTrackingService.class',
                '**/service/impl/VisitorTrackingServiceImpl.class',
                '**/service/impl/ElasticsearchSearchServiceImpl.class',
                '**/service/impl/EmailSenderServiceImpl.class',
                '**/service/impl/AuditServiceImpl.class',
                '**/controller/AdminActiveUsersController.class',
                '**/controller/VisitorController.class',
                '**/PortfolioBackendApplication.class'
            ])
        }))
    }
}

check {
    dependsOn jacocoTestCoverageVerification
}

// SonarQube configuration
sonar {
    properties {
        property 'sonar.projectName', 'Portfolio Backend'
        property 'sonar.projectKey', 'emmanuelgabe_portfolio'
        property 'sonar.organization', 'emmanuelgabe'
        property 'sonar.host.url', 'https://sonarcloud.io'
        property 'sonar.sources', 'src/main/java'
        property 'sonar.tests', 'src/test/java'
        property 'sonar.java.binaries', 'build/classes/java/main'
        property 'sonar.java.test.binaries', 'build/classes/java/test'
        property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco/test/jacocoTestReport.xml'
        // Exclude POJOs, generated code, and packages tested via integration tests
        property 'sonar.exclusions', [
            '**/config/**',
            '**/entity/**',
            '**/dto/**',
            '**/exception/**',
            '**/mapper/**',
            '**/version/**',
            '**/health/**',
            '**/security/**',
            '**/graphql/**',
            '**/batch/**',
            '**/kafka/**',
            '**/messaging/**',
            '**/metrics/**',
            '**/search/**',
            '**/audit/**',
            '**/PortfolioBackendApplication.class'
        ].join(',')
        property 'sonar.test.exclusions', 'src/test/**'
    }
}
